--- a/css/now.css
+++ b/css/now.css
@@ -8,7 +8,7 @@ html, body, header, form, input {
 body {
 	background: #e5e5e5;
 	font-family: Roboto, sans-serif;
-	overflow-y: scroll;
+	overflow: hidden;
 }
 
 header {
@@ -58,17 +58,22 @@ header input, .card {
 	margin: auto;
 }
 
-.leftColumn, .rightColumn {
+.column {
 	width: 50%;
 	box-sizing: border-box;
 	float: left;
 	min-height: 10px;
+	padding: 0 5px;
 }
-.leftColumn {padding-right: 10px;}
-.rightColumn {padding-left: 10px;}
+.column:first-child {
+	padding: 0 5px 0 10px;
+}
+.column:last-child {
+	padding: 0 10px 0 5px;
+}
 
 .card {
-	margin: 20px auto 0;
+	margin: 10px auto 0;
 	display: none;
 	-webkit-transform: translate3d(0,800px,0);
 	transform: translate3d(0,800px,0);
@@ -205,20 +210,17 @@ header input, .card {
 .card.apps {
 	text-align: center;
 }
-.card.apps ul {
-	list-style: none;
+.card.apps div {
 	margin: -10px 0 0;
-	padding: 0;
-}
-.card.apps .icon {
-	width: 64px;
 }
 .card.apps .app {
 	display: inline-block;
-	width: 25%;
 	font-size: 12px;
-	cursor: pointer;
 	margin-top: 10px;
+	color: inherit;
+	text-decoration: none;
+	padding: 0 5px;
+	box-sizing: border-box;
 }
 .card.apps .appname {
 	white-space: nowrap;
