--- a/css/cards.css
+++ b/css/cards.css
@@ -72,6 +72,12 @@
 	text-align: left;
 	padding-left: 5px;
 }
+.card .config input[type="text"] {
+	border: 1px solid #BBB;
+	border-radius: 3px;
+	padding: 1px 5px;
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3) inset;
+}
 
 .configbutton, .unconfigbutton {
 	position: absolute;
