Changed card style to be more like actual google now cards

--- a/css/base.css
+++ b/css/base.css
@@ -42,7 +42,7 @@ header input {
 	font-family: inherit;
 }
 
-header input, .card .front, .card .back {
+header input {
 	border: 0;
 	border-radius: 3px;
 	padding: 10px;
