--- a/css/cards.css
+++ b/css/cards.css
@@ -26,6 +26,14 @@
 .card .front, .card .back {
 	display: block;
 	width: 100%;
+	background: #fff;
+	border-radius: 3px;
+	border: 1px solid #D8D8D8;
+	border-bottom-width: 2px;
+	border-top-width: 0;
+	box-sizing: border-box;
+	padding: 10px;
+	
 	-webkit-transform-style: preserve-3d;
 	-webkit-backface-visibility: hidden;
 }
