--- a/css/suggestions.css
+++ b/css/suggestions.css
@@ -6,6 +6,10 @@
 	margin-left: 30%;
 	margin-top: -10px;
 	box-shadow: 0 1px 20px rgba(0, 0, 0, 0.3);
+	background: #FFF;
+	padding: 10px;
+	border-radius: 3px;
+	box-sizing: border-box;
 }
 
 .card.suggestions ul {
