--- a/css/base.css
+++ b/css/base.css
@@ -51,3 +51,20 @@ header input {
 	width: 40%;
 	box-sizing: border-box;
 }
+
+#globalbuttons {
+	position: fixed;
+	bottom: 0;
+	right: 0;
+	font-size: 18px;
+	color: #444;
+	padding: 5px;
+}
+#globalbuttons i {
+	margin-right: 5px;
+	cursor: pointer;
+}
+#globalbuttons .defaultntp {
+	position: relative;
+	top: 1px;
+}
