--- a/css/cards.css
+++ b/css/cards.css
@@ -9,7 +9,7 @@
 	float: left;
 	min-height: 10px;
 	padding: 0 5px;
-	-webkit-perspective: 500px;
+	position: relative;
 }
 .column:first-child {
 	padding: 0 5px 0 10px;
@@ -17,12 +17,22 @@
 .column:last-child {
 	padding: 0 10px 0 5px;
 }
+.column:only-child {
+	padding: 0;
+}
 
 .card {
 	margin: 10px auto 0;
 	display: none;
 	position: relative;
 }
+.cardplaceholder {
+    margin: 8px auto 0;
+    background: rgba(255, 255, 255, 0.5);
+    border: 1px dashed #bbb;
+    box-sizing: border-box;
+}
+
 .card .front, .card .back {
 	display: block;
 	width: 100%;
