--- a/css/base.css
+++ b/css/base.css
@@ -8,6 +8,7 @@ html, body, header, form, input {
 body {
 	background: #e5e5e5;
 	font-family: Roboto, sans-serif;
+	overflow-y: scroll;
 }
 
 header {
