--- a/css/bookmarks.css
+++ b/css/bookmarks.css
@@ -1,39 +1,40 @@
-/*.bookmarksbar {
+.bookmarksbar {
 	position: absolute;
-	top: 5px;
-	left: 5px;
-	right: 5px;
-	height: 20px;
+	top: 0;
+	left: 0;
+	right: 0;
+	height: 26px;
 	margin: 0;
 	list-style: none;
 	text-align: left;
 	font-size: 13px;
-	padding: 5px;
-	background: rgba(255, 255, 255, 0.5);
-	border-radius: 3px;
+	padding: 0 3px;
+	background: rgba(255, 255, 255, 0.6);
 }
 
 .bookmarksbar li {
-    display: inline-block;
-    height: 20px;
-    line-height: 20px;
-    padding: 0 6px;
+	display: inline-block;
+	height: 26px;
+	line-height: 26px;
 }
 .bookmarksbar .favicon {
-    margin-top: 2px;
+	vertical-align: top;
+	margin-top: 5px;
 }
 .bookmarksbar .title {
-    line-height: 20px;
-    vertical-align: top;
+	line-height: 26px;
+	vertical-align: top;
 }
 .bookmarksbar .link {
-    text-decoration: none;
-    color: inherit;
+	text-decoration: none;
+	color: inherit;
+	display: inline-block;
+	vertical-align: top;
+	height: 26px;
+	line-height: 26px;
+	padding: 0 6px;
 }
 .bookmarksbar .link:hover {
-	text-decoration: underline;
-}*/
-
-.bookmarksbar {
-	display: none;
+	background: rgba(0, 0, 0, 0.1);
 }
+
