--- a/css/base.css
+++ b/css/base.css
@@ -8,6 +8,8 @@ html, body, header, form, input {
 body {
 	background: #e5e5e5;
 	font-family: Roboto, sans-serif;
+	position: relative;
+	overflow-x: hidden;
 	overflow-y: scroll;
 }
 
