--- a/css/cards.css
+++ b/css/cards.css
@@ -1,5 +1,4 @@
 .columns {
-	width: 70%;
 	margin: auto;
 }
 
@@ -9,7 +8,6 @@
 	float: left;
 	min-height: 200px;
 	padding: 0 5px;
-	position: relative;
 }
 .column:first-child {
 	padding: 0 5px 0 10px;
@@ -19,6 +17,14 @@
 }
 .column:only-child {
 	padding: 0;
+}
+
+.newcolumn {
+	min-height: 200px;
+	float: left;
+	padding: 0 5px;
+	position: relative;
+	box-sizing: border-box;
 }
 
 .card {
@@ -96,7 +102,6 @@
 .configbutton, .unconfigbutton {
 	position: absolute;
 	top: 3px;
-	bottom: 3px;
 	right: 5px;
 	color: #CCC;
 	font-size: 16px;
